New interface updates and continuation of the remaining features

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Medical Record</title>
+    <title>Afia DZ</title>
     <link rel="icon" type="image/x-icon" href="/medical-record.png">
   </head>
   <body>
